media/jellyseerr/jellyseerr-deployment.yaml
# jellyseerr deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /app/config
          name: jellyseerr-config
      volumes:
      - name: jellyseerr-config
        persistentVolumeClaim:  # Corrected key
          claimName: jellyseerr-config-pvc
---
