media/jellyseerr/jellyseerr-svc.yaml
# jellyseerr service
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: LoadBalancer
---
